oasis-macros/tests/ui/private_state.stderr
error: `struct Counter` should have `pub` visibility.
 --> $DIR/private_state.rs:4:1
  |
4 | struct Counter(u32);
  | ^^^^^^

error: aborting due to previous error

